parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LEFT_SQB
    ML_COMMENT
    RIGHT_SQB
    SL_COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> class_decl_list
Rule 2     class_decl_list -> class_decl class_decl_list
Rule 3     class_decl_list -> empty
Rule 4     class_decl -> CLASS ID LEFT_CB class_body_decl_list RIGHT_CB
Rule 5     class_decl -> CLASS ID EXTENDS ID LEFT_CB class_body_decl_list RIGHT_CB
Rule 6     class_body_decl_list -> class_body_decl class_body_decl_cont
Rule 7     class_body_decl_cont -> class_body_decl class_body_decl_cont
Rule 8     class_body_decl_cont -> empty
Rule 9     class_body_decl -> field_decl
Rule 10    class_body_decl -> method_decl
Rule 11    class_body_decl -> constructor_decl
Rule 12    field_decl -> modifier var_decl
Rule 13    modifier -> PUBLIC STATIC
Rule 14    modifier -> PRIVATE STATIC
Rule 15    modifier -> PUBLIC
Rule 16    modifier -> PRIVATE
Rule 17    modifier -> STATIC
Rule 18    modifier -> empty
Rule 19    var_decl -> type variables SEMI_COLON
Rule 20    type -> TYPE_INT
Rule 21    type -> TYPE_FLOAT
Rule 22    type -> TYPE_BOOLEAN
Rule 23    type -> ID
Rule 24    variables -> variable variables_cont
Rule 25    variables_cont -> COMMA variable variables_cont
Rule 26    variables_cont -> empty
Rule 27    variable -> ID
Rule 28    method_decl -> modifier type ID LEFT_PN formals RIGHT_PN block
Rule 29    method_decl -> modifier TYPE_VOID ID LEFT_PN formals RIGHT_PN block
Rule 30    constructor_decl -> modifier ID LEFT_PN formals RIGHT_PN block
Rule 31    formals -> formal_param formals_cont
Rule 32    formals -> empty
Rule 33    formals_cont -> COMMA formal_param formals_cont
Rule 34    formals_cont -> empty
Rule 35    formal_param -> type variable
Rule 36    block -> LEFT_CB stmt_list RIGHT_CB
Rule 37    stmt_list -> stmt stmt_list
Rule 38    stmt_list -> empty
Rule 39    stmt -> IF LEFT_PN expr RIGHT_PN stmt
Rule 40    stmt -> IF LEFT_PN expr RIGHT_PN stmt ELSE stmt
Rule 41    stmt -> WHILE LEFT_PN expr RIGHT_PN stmt
Rule 42    stmt -> FOR LEFT_PN for_cond1 SEMI_COLON for_cond2 SEMI_COLON for_cond3 RIGHT_PN stmt
Rule 43    stmt -> RETURN return_val SEMI_COLON
Rule 44    stmt -> stmt_expr SEMI_COLON
Rule 45    stmt -> BREAK SEMI_COLON
Rule 46    stmt -> CONTINUE SEMI_COLON
Rule 47    stmt -> block
Rule 48    stmt -> var_decl
Rule 49    stmt -> SEMI_COLON
Rule 50    for_cond1 -> stmt_expr
Rule 51    for_cond1 -> empty
Rule 52    for_cond2 -> expr
Rule 53    for_cond2 -> empty
Rule 54    for_cond3 -> stmt_expr
Rule 55    for_cond3 -> empty
Rule 56    return_val -> expr
Rule 57    return_val -> empty
Rule 58    literal -> INT_CONST
Rule 59    literal -> FLOAT_CONST
Rule 60    literal -> STRING_CONST
Rule 61    literal -> NULL
Rule 62    literal -> TRUE
Rule 63    literal -> FALSE
Rule 64    primary -> literal
Rule 65    primary -> THIS
Rule 66    primary -> SUPER
Rule 67    primary -> LEFT_PN expr RIGHT_PN
Rule 68    primary -> NEW ID LEFT_PN arguments RIGHT_PN
Rule 69    primary -> lhs
Rule 70    primary -> method_invocation
Rule 71    arguments -> expr arguments_cont
Rule 72    arguments -> empty
Rule 73    arguments_cont -> COMMA expr arguments_cont
Rule 74    arguments_cont -> empty
Rule 75    lhs -> field_access
Rule 76    field_access -> primary DOT ID
Rule 77    field_access -> ID
Rule 78    method_invocation -> field_access LEFT_PN arguments RIGHT_PN
Rule 79    expr -> primary
Rule 80    expr -> assign
Rule 81    assign -> lhs ASSIGN expr
Rule 82    assign -> lhs INCREMENT
Rule 83    assign -> INCREMENT lhs
Rule 84    assign -> lhs DECREMENT
Rule 85    assign -> DECREMENT lhs
Rule 86    expr -> expr PLUS expr
Rule 87    expr -> expr MINUS expr
Rule 88    expr -> expr STAR expr
Rule 89    expr -> expr F_SLASH expr
Rule 90    expr -> expr AND expr
Rule 91    expr -> expr OR expr
Rule 92    expr -> expr EQ expr
Rule 93    expr -> expr NOT_EQ expr
Rule 94    expr -> expr LT expr
Rule 95    expr -> expr LTE expr
Rule 96    expr -> expr GT expr
Rule 97    expr -> expr GTE expr
Rule 98    expr -> PLUS expr
Rule 99    expr -> MINUS expr
Rule 100   expr -> NOT expr
Rule 101   stmt_expr -> assign
Rule 102   stmt_expr -> method_invocation
Rule 103   empty -> <empty>

Terminals, with rules where they appear

AND                  : 90
ASSIGN               : 81
BREAK                : 45
CLASS                : 4 5
COMMA                : 25 33 73
CONTINUE             : 46
DECREMENT            : 84 85
DOT                  : 76
ELSE                 : 40
EQ                   : 92
EXTENDS              : 5
FALSE                : 63
FLOAT_CONST          : 59
FOR                  : 42
F_SLASH              : 89
GT                   : 96
GTE                  : 97
ID                   : 4 5 5 23 27 28 29 30 68 76 77
IF                   : 39 40
INCREMENT            : 82 83
INT_CONST            : 58
LEFT_CB              : 4 5 36
LEFT_PN              : 28 29 30 39 40 41 42 67 68 78
LEFT_SQB             : 
LT                   : 94
LTE                  : 95
MINUS                : 87 99
ML_COMMENT           : 
NEW                  : 68
NOT                  : 100
NOT_EQ               : 93
NULL                 : 61
OR                   : 91
PLUS                 : 86 98
PRIVATE              : 14 16
PUBLIC               : 13 15
RETURN               : 43
RIGHT_CB             : 4 5 36
RIGHT_PN             : 28 29 30 39 40 41 42 67 68 78
RIGHT_SQB            : 
SEMI_COLON           : 19 42 42 43 44 45 46 49
SL_COMMENT           : 
STAR                 : 88
STATIC               : 13 14 17
STRING_CONST         : 60
SUPER                : 66
THIS                 : 65
TRUE                 : 62
TYPE_BOOLEAN         : 22
TYPE_FLOAT           : 21
TYPE_INT             : 20
TYPE_VOID            : 29
WHILE                : 41
error                : 

Nonterminals, with rules where they appear

arguments            : 68 78
arguments_cont       : 71 73
assign               : 80 101
block                : 28 29 30 47
class_body_decl      : 6 7
class_body_decl_cont : 6 7
class_body_decl_list : 4 5
class_decl           : 2
class_decl_list      : 1 2
constructor_decl     : 11
empty                : 3 8 18 26 32 34 38 51 53 55 57 72 74
expr                 : 39 40 41 52 56 67 71 73 81 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 99 100
field_access         : 75 78
field_decl           : 9
for_cond1            : 42
for_cond2            : 42
for_cond3            : 42
formal_param         : 31 33
formals              : 28 29 30
formals_cont         : 31 33
lhs                  : 69 81 82 83 84 85
literal              : 64
method_decl          : 10
method_invocation    : 70 102
modifier             : 12 28 29 30
primary              : 76 79
program              : 0
return_val           : 43
stmt                 : 37 39 40 40 41 42
stmt_expr            : 44 50 54
stmt_list            : 36 37
type                 : 19 28 35
var_decl             : 12 48
variable             : 24 25 35
variables            : 19
variables_cont       : 24 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_decl_list
    (2) class_decl_list -> . class_decl class_decl_list
    (3) class_decl_list -> . empty
    (4) class_decl -> . CLASS ID LEFT_CB class_body_decl_list RIGHT_CB
    (5) class_decl -> . CLASS ID EXTENDS ID LEFT_CB class_body_decl_list RIGHT_CB
    (103) empty -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 103 (empty -> .)

    program                        shift and go to state 1
    class_decl_list                shift and go to state 2
    class_decl                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> class_decl_list .

    $end            reduce using rule 1 (program -> class_decl_list .)


state 3

    (2) class_decl_list -> class_decl . class_decl_list
    (2) class_decl_list -> . class_decl class_decl_list
    (3) class_decl_list -> . empty
    (4) class_decl -> . CLASS ID LEFT_CB class_body_decl_list RIGHT_CB
    (5) class_decl -> . CLASS ID EXTENDS ID LEFT_CB class_body_decl_list RIGHT_CB
    (103) empty -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 103 (empty -> .)

    class_decl                     shift and go to state 3
    class_decl_list                shift and go to state 6
    empty                          shift and go to state 4

state 4

    (3) class_decl_list -> empty .

    $end            reduce using rule 3 (class_decl_list -> empty .)


state 5

    (4) class_decl -> CLASS . ID LEFT_CB class_body_decl_list RIGHT_CB
    (5) class_decl -> CLASS . ID EXTENDS ID LEFT_CB class_body_decl_list RIGHT_CB

    ID              shift and go to state 7


state 6

    (2) class_decl_list -> class_decl class_decl_list .

    $end            reduce using rule 2 (class_decl_list -> class_decl class_decl_list .)


state 7

    (4) class_decl -> CLASS ID . LEFT_CB class_body_decl_list RIGHT_CB
    (5) class_decl -> CLASS ID . EXTENDS ID LEFT_CB class_body_decl_list RIGHT_CB

    LEFT_CB         shift and go to state 8
    EXTENDS         shift and go to state 9


state 8

    (4) class_decl -> CLASS ID LEFT_CB . class_body_decl_list RIGHT_CB
    (6) class_body_decl_list -> . class_body_decl class_body_decl_cont
    (9) class_body_decl -> . field_decl
    (10) class_body_decl -> . method_decl
    (11) class_body_decl -> . constructor_decl
    (12) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID LEFT_PN formals RIGHT_PN block
    (29) method_decl -> . modifier TYPE_VOID ID LEFT_PN formals RIGHT_PN block
    (30) constructor_decl -> . modifier ID LEFT_PN formals RIGHT_PN block
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PRIVATE STATIC
    (15) modifier -> . PUBLIC
    (16) modifier -> . PRIVATE
    (17) modifier -> . STATIC
    (18) modifier -> . empty
    (103) empty -> .

    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17
    TYPE_VOID       reduce using rule 103 (empty -> .)
    ID              reduce using rule 103 (empty -> .)
    TYPE_INT        reduce using rule 103 (empty -> .)
    TYPE_FLOAT      reduce using rule 103 (empty -> .)
    TYPE_BOOLEAN    reduce using rule 103 (empty -> .)

    class_body_decl_list           shift and go to state 10
    class_body_decl                shift and go to state 11
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 9

    (5) class_decl -> CLASS ID EXTENDS . ID LEFT_CB class_body_decl_list RIGHT_CB

    ID              shift and go to state 20


state 10

    (4) class_decl -> CLASS ID LEFT_CB class_body_decl_list . RIGHT_CB

    RIGHT_CB        shift and go to state 21


state 11

    (6) class_body_decl_list -> class_body_decl . class_body_decl_cont
    (7) class_body_decl_cont -> . class_body_decl class_body_decl_cont
    (8) class_body_decl_cont -> . empty
    (9) class_body_decl -> . field_decl
    (10) class_body_decl -> . method_decl
    (11) class_body_decl -> . constructor_decl
    (103) empty -> .
    (12) field_decl -> . modifier var_decl
    (28) method_decl -> . modifier type ID LEFT_PN formals RIGHT_PN block
    (29) method_decl -> . modifier TYPE_VOID ID LEFT_PN formals RIGHT_PN block
    (30) constructor_decl -> . modifier ID LEFT_PN formals RIGHT_PN block
    (13) modifier -> . PUBLIC STATIC
    (14) modifier -> . PRIVATE STATIC
    (15) modifier -> . PUBLIC
    (16) modifier -> . PRIVATE
    (17) modifier -> . STATIC
    (18) modifier -> . empty

    RIGHT_CB        reduce using rule 103 (empty -> .)
    TYPE_VOID       reduce using rule 103 (empty -> .)
    ID              reduce using rule 103 (empty -> .)
    TYPE_INT        reduce using rule 103 (empty -> .)
    TYPE_FLOAT      reduce using rule 103 (empty -> .)
    TYPE_BOOLEAN    reduce using rule 103 (empty -> .)
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17

    class_body_decl                shift and go to state 22
    class_body_decl_cont           shift and go to state 23
    empty                          shift and go to state 24
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15

state 12

    (9) class_body_decl -> field_decl .

    PUBLIC          reduce using rule 9 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 9 (class_body_decl -> field_decl .)
    TYPE_VOID       reduce using rule 9 (class_body_decl -> field_decl .)
    ID              reduce using rule 9 (class_body_decl -> field_decl .)
    TYPE_INT        reduce using rule 9 (class_body_decl -> field_decl .)
    TYPE_FLOAT      reduce using rule 9 (class_body_decl -> field_decl .)
    TYPE_BOOLEAN    reduce using rule 9 (class_body_decl -> field_decl .)
    RIGHT_CB        reduce using rule 9 (class_body_decl -> field_decl .)


state 13

    (10) class_body_decl -> method_decl .

    PUBLIC          reduce using rule 10 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 10 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 10 (class_body_decl -> method_decl .)
    TYPE_VOID       reduce using rule 10 (class_body_decl -> method_decl .)
    ID              reduce using rule 10 (class_body_decl -> method_decl .)
    TYPE_INT        reduce using rule 10 (class_body_decl -> method_decl .)
    TYPE_FLOAT      reduce using rule 10 (class_body_decl -> method_decl .)
    TYPE_BOOLEAN    reduce using rule 10 (class_body_decl -> method_decl .)
    RIGHT_CB        reduce using rule 10 (class_body_decl -> method_decl .)


state 14

    (11) class_body_decl -> constructor_decl .

    PUBLIC          reduce using rule 11 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 11 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 11 (class_body_decl -> constructor_decl .)
    TYPE_VOID       reduce using rule 11 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 11 (class_body_decl -> constructor_decl .)
    TYPE_INT        reduce using rule 11 (class_body_decl -> constructor_decl .)
    TYPE_FLOAT      reduce using rule 11 (class_body_decl -> constructor_decl .)
    TYPE_BOOLEAN    reduce using rule 11 (class_body_decl -> constructor_decl .)
    RIGHT_CB        reduce using rule 11 (class_body_decl -> constructor_decl .)


state 15

    (12) field_decl -> modifier . var_decl
    (28) method_decl -> modifier . type ID LEFT_PN formals RIGHT_PN block
    (29) method_decl -> modifier . TYPE_VOID ID LEFT_PN formals RIGHT_PN block
    (30) constructor_decl -> modifier . ID LEFT_PN formals RIGHT_PN block
    (19) var_decl -> . type variables SEMI_COLON
    (20) type -> . TYPE_INT
    (21) type -> . TYPE_FLOAT
    (22) type -> . TYPE_BOOLEAN
    (23) type -> . ID

    TYPE_VOID       shift and go to state 28
    ID              shift and go to state 27
    TYPE_INT        shift and go to state 29
    TYPE_FLOAT      shift and go to state 30
    TYPE_BOOLEAN    shift and go to state 31

    var_decl                       shift and go to state 25
    type                           shift and go to state 26

state 16

    (13) modifier -> PUBLIC . STATIC
    (15) modifier -> PUBLIC .

    STATIC          shift and go to state 32
    TYPE_VOID       reduce using rule 15 (modifier -> PUBLIC .)
    ID              reduce using rule 15 (modifier -> PUBLIC .)
    TYPE_INT        reduce using rule 15 (modifier -> PUBLIC .)
    TYPE_FLOAT      reduce using rule 15 (modifier -> PUBLIC .)
    TYPE_BOOLEAN    reduce using rule 15 (modifier -> PUBLIC .)


state 17

    (17) modifier -> STATIC .

    TYPE_VOID       reduce using rule 17 (modifier -> STATIC .)
    ID              reduce using rule 17 (modifier -> STATIC .)
    TYPE_INT        reduce using rule 17 (modifier -> STATIC .)
    TYPE_FLOAT      reduce using rule 17 (modifier -> STATIC .)
    TYPE_BOOLEAN    reduce using rule 17 (modifier -> STATIC .)


state 18

    (14) modifier -> PRIVATE . STATIC
    (16) modifier -> PRIVATE .

    STATIC          shift and go to state 33
    TYPE_VOID       reduce using rule 16 (modifier -> PRIVATE .)
    ID              reduce using rule 16 (modifier -> PRIVATE .)
    TYPE_INT        reduce using rule 16 (modifier -> PRIVATE .)
    TYPE_FLOAT      reduce using rule 16 (modifier -> PRIVATE .)
    TYPE_BOOLEAN    reduce using rule 16 (modifier -> PRIVATE .)


state 19

    (18) modifier -> empty .
